--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -322,6 +322,7 @@ RES_IMAGES = \
   qt/res/images/checked.png \
   qt/res/images/raptoreum_logo_horizontal.png \
   qt/res/images/raptoreum_logo_toolbar.png \
+  qt/res/images/raptoreum_logo_toolbar_blue.png \
   qt/res/images/qtreeview_selected.png \
   qt/res/images/splash.png \
   qt/res/images/unchecked.png
