adds futuretx send and info commands skeleton

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -342,6 +342,7 @@ libraptoreum_server_a_SOURCES = \
   rpc/rpcquorums.cpp \
   rpc/server.cpp \
   rpc/privatesend.cpp \
+  rpc/rpcfuture.cpp \
   script/sigcache.cpp \
   script/ismine.cpp \
   spork.cpp \
