Socialruins futures tab fixed.  (#26)
Updates:
'pay from' dropdown table updates when balance changes.
added address label column to 'pay from' dropdown table.
Disable coin control frame (for good) after repeated toggles on settings

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -186,6 +186,7 @@ BITCOIN_QT_H = \
   qt/walletframe.h \
   qt/walletmodel.h \
   qt/walletmodeltransaction.h \
+  qt/walletmodelfuturestransaction.h \
   qt/walletview.h \
   qt/winshutdownmonitor.h
 
@@ -301,6 +302,7 @@ BITCOIN_QT_WALLET_CPP = \
   qt/walletframe.cpp \
   qt/walletmodel.cpp \
   qt/walletmodeltransaction.cpp \
+  qt/walletmodelfuturestransaction.cpp \
   qt/walletview.cpp
 
 BITCOIN_QT_CPP = $(BITCOIN_QT_BASE_CPP)
