Futures UI fixes (#28)
* Update transactionrecord.h

Add FutureSend, FutureReceive public enum types

* Update transactionrecord.cpp

* Update transactionrecord.cpp

* Update transactionview.cpp

* Update transactiondesc.cpp

* Update transactionrecord.cpp

* Update transactionrecord.cpp

* Update transactionrecord.cpp

* Update transactionrecord.cpp

* Update transactionrecord.cpp

* Update transactiontablemodel.cpp

* Update transactionrecord.cpp

* Update transactionrecord.cpp

* Update transactiontablemodel.cpp

* Update transactiontablemodel.cpp

* Update transactiontablemodel.cpp

* Update transactionview.cpp

* Update transactiondesc.cpp

* Update transactionrecord.cpp

* Update transactionrecord.cpp

* Update transactiondesc.cpp

* Update transactionrecord.cpp

* Update transactionrecord.cpp

* Update configure.ac

* Update guiconstants.h

* Update configure.ac

* Update configure.ac

* Update rpcfuture.cpp

* Update transactionrecord.cpp

* Update init.cpp

* Update transactionrecord.cpp

* Update transactionrecord.cpp

* Update transactiondesc.cpp

* Added declaration for FutureTxDescToHTML()

* Added function TransactionDesc::FutureTxDescToHTML

* Added functions for FutureTX Maturity & Status

* Added functions for FutureTX Maturity & Status

* Added functions for Future TX maturity and status

* Added functions for Future TX maturity and status

* Update rpcfuture.cpp

* Update configure.ac

* Update transactionrecord.cpp

* Add FUTURETX Dialog files

* Add Future TX page

* Add Future tx page

* Future TX dialog pages

* Add FutureTX Dialog QT UI

* Add css for Future page

* Add css for Future page

* Add future tx page

* Add future tx page

* Add getAddressBalances for futureTx functions

* Updated copyright headers

* Add future tx sendcoinsrecipient call

* Add future tx page

* Add future tx page

* Further fix for disabling coin cont

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -49,6 +49,8 @@ QT_FORMS_UI = \
   qt/forms/debugwindow.ui \
   qt/forms/sendcoinsdialog.ui \
   qt/forms/sendcoinsentry.ui \
+  qt/forms/sendfuturesdialog.ui \
+  qt/forms/sendfuturesentry.ui \
   qt/forms/signverifymessagedialog.ui \
   qt/forms/transactiondescdialog.ui
 
@@ -89,6 +91,8 @@ QT_MOC_CPP = \
   qt/moc_rpcconsole.cpp \
   qt/moc_sendcoinsdialog.cpp \
   qt/moc_sendcoinsentry.cpp \
+  qt/moc_sendfuturesdialog.cpp \
+  qt/moc_sendfuturesentry.cpp \
   qt/moc_signverifymessagedialog.cpp \
   qt/moc_splashscreen.cpp \
   qt/moc_trafficgraphwidget.cpp \
@@ -166,6 +170,8 @@ BITCOIN_QT_H = \
   qt/rpcconsole.h \
   qt/sendcoinsdialog.h \
   qt/sendcoinsentry.h \
+  qt/sendfuturesdialog.h \
+  qt/sendfuturesentry.h \
   qt/signverifymessagedialog.h \
   qt/splashscreen.h \
   qt/trafficgraphdata.h \
@@ -180,6 +186,7 @@ BITCOIN_QT_H = \
   qt/walletframe.h \
   qt/walletmodel.h \
   qt/walletmodeltransaction.h \
+  qt/walletmodelfuturestransaction.h \
   qt/walletview.h \
   qt/winshutdownmonitor.h
 
@@ -283,6 +290,8 @@ BITCOIN_QT_WALLET_CPP = \
   qt/recentrequeststablemodel.cpp \
   qt/sendcoinsdialog.cpp \
   qt/sendcoinsentry.cpp \
+  qt/sendfuturesdialog.cpp \
+  qt/sendfuturesentry.cpp \
   qt/signverifymessagedialog.cpp \
   qt/transactiondesc.cpp \
   qt/transactiondescdialog.cpp \
@@ -293,6 +302,7 @@ BITCOIN_QT_WALLET_CPP = \
   qt/walletframe.cpp \
   qt/walletmodel.cpp \
   qt/walletmodeltransaction.cpp \
+  qt/walletmodelfuturestransaction.cpp \
   qt/walletview.cpp
 
 BITCOIN_QT_CPP = $(BITCOIN_QT_BASE_CPP)
