disabled mainnet by exiting wallet "randomly". add future index objects

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -115,6 +115,7 @@ BITCOIN_CORE_H = \
   addrdb.h \
   addressindex.h \
   spentindex.h \
+  indices/future_index.h \
   addrman.h \
   base58.h \
   batchedlogger.h \
